fixed alignment error

--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ header, nav {
 
 aside {
     position: absolute;
-    left: 496px;
+    left: 472.5px;
     top: 0px;
     width: 472.5px;
     height: 267px;
